--- a/poem.rmd
+++ b/poem.rmd
@@ -24,3 +24,33 @@ you, if you change any of this the git program will notice it and compromise you
 
 ## Last Verse
 <!--Put a short poem of your choice 8-20 lines,here!-->
+
+After Death BY CHRISTINA ROSSETTI
+
+The curtains were half drawn, the floor was swept
+
+And strewn with rushes, rosemary and may
+
+Lay thick upon the bed on which I lay,
+
+Where through the lattice ivy-shadows crept.
+
+He leaned above me, thinking that I slept
+
+And could not hear him; but I heard him say,
+
+‘Poor child, poor child’: and as he turned away
+
+Came a deep silence, and I knew he wept.
+
+He did not touch the shroud, or raise the fold
+
+That hid my face, or take my hand in his,
+
+Or ruffle the smooth pillows for my head:
+
+He did not love me living; but once dead
+
+He pitied me; and very sweet it is
+
+To know he still is warm though I am cold.
